--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyRecipes</string>
     <string name="my_recipes">My recipes</string>
     <string name="my_shopping_list">My Shopping List</string>
+    <string name="recipes_list">Recipes List</string>
 </resources>
